terraform/manifests/foo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: default
spec:
  selector:
    app: foo-app
  ports:
    - port: 80
      targetPort: http-web
